# probegen

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DOC_ASSESSMENT.md  README.md  parity.yaml.example  probegen-spec-addendum.md  probegen-spec.md  probegen.yaml.example  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: probegen.yml  sync-example-template.yml  test.yml
context/: bad_examples.md  good_examples.md  interactions.md  product.md  users.md
context/traces/: README.md
docs/: configuration.md  langgraph-agentic-rag-quickstart.md  maintainers.md  platforms.md  spec.md
examples/langgraph-agentic-rag/: .env.example  .gitattributes  README.md  parity.yaml  probegen.yaml  requirements.txt
examples/langgraph-agentic-rag/.github/workflows/: parity.yml  probegen.yml
examples/langgraph-agentic-rag/app/: graph.py  main.py
examples/langgraph-agentic-rag/changes/: always_cite.patch  proactive_retrieval.patch
examples/langgraph-agentic-rag/context/: bad_examples.md  good_examples.md  interactions.md  product.md  users.md
examples/langgraph-agentic-rag/context/traces/: README.md  trace_01.txt  trace_02.txt
examples/langgraph-agentic-rag/docs/: quickstart.md
examples/langgraph-agentic-rag/expected_outputs/: stage1.json  stage2.json  stage3.json
examples/langgraph-agentic-rag/judges/: retrieval_relevance.md
examples/langgraph-agentic-rag/knowledge_base/: account_security.md  data_exports.md  team_billing.md
examples/langgraph-agentic-rag/prompts/: answer.md  grade.md  query_or_respond.md  rewrite.md
examples/langgraph-agentic-rag/scripts/: seed_langsmith_dataset.py
parity/: __init__.py  __main__.py  config.py  context.py  errors.py  export.py  github.py  renderers.py  write_probes.py
parity/cli/: doctor_cmd.py  embed_batch.py  find_similar.py  find_similar_batch.py  get_behavior_diff.py  init_cmd.py  main.py  post_comment.py  resolve_run_id.py  run_stage.py  setup_mcp.py  write_evals.py  write_probes.py
parity/integrations/: braintrust.py  langsmith.py  phoenix.py  promptfoo.py
parity/models/: __init__.py  _base.py  eval_case.py  manifests.py  probes.py  proposal.py  raw_change_data.py
parity/prompts/: stage1_template.py  stage2_template.py  stage3_template.py
parity/stages/: _common.py  security.py  stage1.py  stage2.py  stage2_mcp.py  stage3.py
parity/tools/: embedding.py  similarity.py
probegen/: __main__.py  config.py  context.py  errors.py  export.py  github.py  write_probes.py
probegen/cli/: embed_batch.py  find_similar.py  get_behavior_diff.py  init_cmd.py  main.py  post_comment.py  resolve_run_id.py  run_stage.py  setup_mcp.py  write_probes.py
probegen/integrations/: braintrust.py  langsmith.py  phoenix.py  promptfoo.py
probegen/models/: __init__.py  _base.py  eval_case.py  manifests.py  probes.py  raw_change_data.py
probegen/prompts/: stage1_template.py  stage2_template.py  stage3_template.py
probegen/stages/: _common.py  stage1.py  stage2.py  stage3.py
probegen/tools/: embedding.py  similarity.py
tests/: conftest.py
tests/fixtures/: sample_gaps.json  sample_manifest.json  sample_proposal.json
tests/integration/: test_get_behavior_diff.py
tests/unit/: test_classify_artifact.py  test_config.py  test_context.py  test_doctor.py  test_embedding.py  test_eval_case.py  test_example_workflow.py  test_export.py  test_github.py  test_init_cmd.py  test_langsmith_integration.py  test_models.py  test_normalization.py  test_partial_extraction.py  test_phoenix_integration.py  test_probe_ranking.py  test_promptfoo_integration.py  test_prompts.py  test_renderers.py  test_run_stage.py  test_similarity.py  test_simplify_schema.py  test_stage2.py  test_stage2_mcp.py  test_stage3.py  test_stage_common.py  test_stage_security.py  test_write_probes.py
