[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "probegen"
version = "0.1.6"
description = "Change-coupled eval probe generation for LLM systems"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
license = { text = "MIT" }
dependencies = [
    "arize-phoenix-client==2.0.0",
    "braintrust==0.9.0",
    "claude-agent-sdk==0.1.48",
    "click==8.3.1",
    "httpx==0.28.1",
    "langsmith==0.7.17",
    "numpy==2.4.3",
    "openai==2.28.0",
    "pydantic==2.12.5",
    "PyYAML==6.0.3",
    "rich==14.3.3",
    "tiktoken==0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "respx==0.22.0",
]

[project.scripts]
probegen = "probegen.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["probegen*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=probegen --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: live or repo-backed integration tests",
]
