[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "parity-ai"
version = "0.1.12"
description = "Automatically generate evals for every AI change"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Antoine Nguyen" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "arize-phoenix-client==2.0.0",
    "braintrust==0.9.0",
    "claude-agent-sdk==0.1.48",
    "click==8.3.1",
    "httpx==0.28.1",
    "langsmith==0.7.17",
    "mcp==1.26.0",
    "numpy==2.4.3",
    "openai==2.28.0",
    "pydantic==2.12.5",
    "PyYAML==6.0.3",
    "rich==14.3.3",
    "tiktoken==0.12.0",
]

[project.urls]
Homepage = "https://github.com/antoinenguyen27/parity"
Repository = "https://github.com/antoinenguyen27/parity"
Issues = "https://github.com/antoinenguyen27/parity/issues"

[project.optional-dependencies]
dev = [
    "build==1.3.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "respx==0.22.0",
]

[project.scripts]
parity = "parity.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["parity*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=parity --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: live or repo-backed integration tests",
]
